--- a/package.json
+++ b/package.json
@@ -84,5 +84,8 @@
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
     "webpack-merge": "^0.13.0"
+  },
+  "dependencies": {
+    "vue-virtual-scroll-list": "^1.2.8"
   }
 }
